# fastapi-boilerplate

./: .env  .flake8  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: bdb9ba7519ca_init_boilerplate_db.py
src/: config.py  database.py  main.py  models.py
src/api/: __init__.py
src/api/auth/: constants.py  models.py  router.py  services.py
src/api/users/: models.py  router.py  services.py  utils.py
